[package]
name = "travelling_salesman_ai_helper"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "distance_calculator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
travelling_salesman = "1.1.22"
time = "0.3.44"